spacing fixed

--- a/migration-crisis/src/sass/_hero.scss
+++ b/migration-crisis/src/sass/_hero.scss
@@ -11,6 +11,7 @@ section.hero {
     position: relative;
     text-align: center;
     width: 100%;
+    margin-bottom: 1rem;
 }
 
 .hero__video {
